# dara_test

my_first_app/: .gitignore  pyproject.toml
my_first_app/my_first_app/: definitions.py  main.py
my_first_app/my_first_app/pages/: classification.py  eda.py
